Compatibiliza codigo com javac antigo